# Foodchain-Magnate-Helper

./: .env  .gitignore  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: pipeline.yml
src/: game_model.py  player_model.py  profit_calculator.py  utils.py
src/database/: database.py  dictionary_database.py
static/: script.js
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: test_integration.py  test_profit_calculator.py  utilities.py
